--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/ngrok": "^4.1.0",
     "expo": "~47.0.3",
+    "expo-screen-orientation": "~5.0.1",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "0.70.5",
+    "react-native-orientation": "^3.1.3",
+    "react-native-orientation-locker": "^1.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
